KFormula uses MathML for copy and paste, reflect it in KWord.

BUG: 136711

svn path=/branches/koffice/1.6/koffice/; revision=623001